--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
     font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica'  'Arial', sans-serif;
     padding: 20px 20px 60px;
